--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
     <script
       src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
+
     ></script>
 
     <script>
       var Alert = ReactBootstrap.Alert;
     </script>
+
+<script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
