--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="powericon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LAUGFS POWER</title>
+    <title>LAUGFS Power PLC - Renewable clean energy provider in Sri Lanka</title>
+    <meta name="description" content="As one of Sri Lanka’s leading independent producers of renewable energy in solar, hydro, and wind, we are a fully owned subsidiary of LAUGFS Holdings, one of Sri Lanka’s largest and most respected conglomerates."/>
+    <meta name="keywords" content="renewable energy, renewable energy companies in sri lanka"/>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
